src/objects/Applicant_Details__c.object
<CustomObject>
    <fields>
        <fullName>Address_Proof_Document__c</fullName>
        <label>Address Proof Document</label>
        <picklist>
            <picklistValues>
                <fullName>Driving License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aadhar Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voter’s ID Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Proof_Number__c</fullName>
        <label>Address Proof Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Proof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Proof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Number__c</fullName>
        <label>Applicant Number</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fifth Applicant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BookingDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BookingDetails</label>
        <referenceTo>Booking_Details__c</referenceTo>
        <relationshipLabel>ApplicantDetails</relationshipLabel>
        <relationshipName>ApplicantDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>ApplicantDetails</relationshipLabel>
        <relationshipName>ApplicantDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certified_copy_of_Article_of_Association__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified copy of Article of Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_copy_of_Board_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified copy of Board Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_copy_of_Partnership_Deed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified copy of Partnership Deed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_copy_of_ROC_Incorporation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified copy of ROC Incorporation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_extract_of_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified extract of Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agartala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmednagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aizawl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aligarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allahabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alleppey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwaye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amalapuram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amaravati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amreli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amritsar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anakapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - N Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Road H.O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arakkonam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asansol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurangabad(Bihar)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurangabad(Maharashtra)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azamgarh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_of_Authorization_Letter_POA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Authorization Letter/POA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_of_Memorandu_of_Association__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Memorandum of Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_of_Workpermit_Employment_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Workpermit / Employment contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Funds_from_NRE_FCNR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funds from NRE / FCNR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funds_from_NRE_NRO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funds from NRE / NRO A/c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landline_Number__c</fullName>
        <label>Landline Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_same_as_PermanentAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing Address same as PermanentAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <picklist>
            <controllingField>Mailing_State__c</controllingField>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewYork</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <picklist>
            <controllingField>Mailing_Country__c</controllingField>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadar &amp; Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman &amp; Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondichery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Zone__c</fullName>
        <label>Mailing Zone</label>
        <picklist>
            <picklistValues>
                <fullName>South Mumbai (So Bo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navi Mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MyID__c</fullName>
        <externalId>true</externalId>
        <label>MyID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Self Employed/Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_Passport_Size_Color_Photograph__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Passport Size Color Photograph</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booking Applicant Details</relationshipLabel>
        <relationshipName>ApplicantDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation_Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Address__c</fullName>
        <label>Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Phone_numbers__c</fullName>
        <label>Office Phone numbers</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Origin_Details__c</fullName>
        <label>Origin Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details_Remarks__c</fullName>
        <label>Other Details/Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PanCard_of_Authority_Signatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PanCard of Authority Signatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pan_Card_Number_of_Authority_Signatory__c</fullName>
        <label>Pan Card Number of Authority Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PancardNo__c</fullName>
        <label>PancardNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pancard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pancard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PassportNoDetails__c</fullName>
        <label>PassportNoDetails</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassportNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PassportNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_address_for_all_correspondence__c</fullName>
        <label>Preferred address for all correspondence</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Mobile_Number__c</fullName>
        <label>Secondary Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Self_attested_List_of_Directors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-attested List of Directors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_attested_List_of_Shareholders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-attested List of Shareholders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_attested_copy_of_PIO_or_OCI_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-attested copy of PIO or OCI Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadar &amp; Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman &amp; Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondichery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype_Of_Applicant__c</fullName>
        <label>Residential Status</label>
        <picklist>
            <controllingField>Type_Of_Applicant__c</controllingField>
            <picklistValues>
                <fullName>Indian National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Nationals Of Indian Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Firm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Of_Applicant__c</fullName>
        <label>Type Of Applicant</label>
        <picklist>
            <picklistValues>
                <fullName>Individual Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Buyer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Of_Origin__c</fullName>
        <label>Type Of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>PIO card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCI card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <picklist>
            <picklistValues>
                <fullName>South Mumbai (So Bo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harbor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navi Mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Applicant Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApplicantDetails</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Mobile_Length_13_digits</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(  Mobile_Number__c  ) &gt; 13</errorConditionFormula>
        <errorMessage>Mobile number Must be up to 13 digits.</errorMessage>
    </validationRules>
</CustomObject>